# KiliMarkets

./: .gitignore  AGENTS.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json
.github/agents/: copilot-instructions.md  speckit.implement.agent.md  speckit.specify.agent.md  speckit.tasks.agent.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
apps/web/: .env.example  index.html  package.json  vite.config.ts
apps/web/src/: main.tsx  styles.css
apps/web/src/app/: App.tsx  providers.tsx  router.tsx
apps/web/src/hooks/: useNetworkMode.ts
apps/web/src/services/: hedge-service.ts  market-service.ts  minting-service.ts  portfolio-service.ts  wallet-service.ts
contracts/cosmwasm/: Cargo.toml
contracts/cosmwasm/contracts/hedge-manager/: Cargo.toml
contracts/cosmwasm/contracts/hedge-manager/src/: lib.rs
contracts/evm/: hardhat.config.ts  package.json  tsconfig.json
contracts/evm/contracts/: Placeholder.sol
contracts/evm/typechain-types/: Placeholder.ts  hardhat.d.ts  index.ts
contracts/evm/typechain-types/factories/: Placeholder__factory.ts  index.ts
infra/config/markets/: commodities.ts
infra/config/networks/: testnet.ts
infra/config/oracles/: feeds.ts
specs/001-agri-token-market/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-agri-token-market/checklists/: requirements.md
specs/001-agri-token-market/contracts/: cosmwasm-hedging.md  evm-tokenization.md  frontend-service-contracts.md
