[package]
name = "hedge-manager"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std.workspace = true
cw-storage-plus.workspace = true
schemars.workspace = true
serde.workspace = true
thiserror.workspace = true
